--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Alis Tiyaning Tiyas Portofolio Website ">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Alis Tiyaning Tiyas">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="twitter:site" content="https://alistiyaning.github.io">
 </head>
     <body>
         <nav> 
